Create Items Conatiners

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <script src="main.js" defer></script>
 </head>
 <body>
-  <form action="" method="post"></form>
+  <form action="" method="post">
+    <div class="left-container"></div>
+    <div class="right-container"></div>
+  </form>
 </body>
 </html>
