Create Brand's Quotes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       </g></svg>
       <!-- Logo SVG End -->
 
+      <p class="quote">Reigning supreme in the world of wealth, Money
+        King—where finances meet finesse.</p>
+        
     </div>
 
     <div class="right-container"></div>
