Create Sign Up Title

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 
       <p class="quote">Reigning supreme in the world of wealth, Money
         King—where finances meet finesse.</p>
-        
+
     </div>
 
-    <div class="right-container"></div>
+    <div class="right-container">
+      <h1>Elevate Your Status</h1>
+    </div>
 
   </form>
 </body>
