--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       <h1>Elevate Your Status</h1>
     </div>
 
+    <div>
+      <input type="text" name="username" id="username">
+      <label for="username">Username</label>
+    </div>
+
   </form>
 </body>
 </html>
