Create Email Input

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
     <div class="right-container">
       <h1>Elevate Your Status</h1>
+
+      <div>
+        <input type="email" name="user_email" id="email">
+        <label for="email">Email</label>
+      </div>
+      
     </div>
 
     <div>
