Create Password Input

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <label for="email">Email</label>
       </div>
 
+      <div>
+        <input type="password" name="user_pass" id="pass">
+        <label for="pass">Password</label>
+      </div>
+
     </div>
 
   </form>
