--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         <label for="pass">Password</label>
       </div>
 
+      <div>
+        <input type="password" name="confirm_pass" id="confirm-pass">
+        <label for="confirm-pass">Confirm Password</label>
+      </div>
+
     </div>
 
   </form>
