Create Submit Button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <label for="confirm-pass">Confirm Password</label>
       </div>
 
+      <div>
+        <button type="submit">Ascend</button>
+      </div>
+
     </div>
 
   </form>
