--- a/index.html
+++ b/index.html
@@ -22,24 +22,25 @@
     <div class="right-container">
       <h1>Elevate Your Status</h1>
 
-      <div>
-        <input type="text" name="username" id="username">
-        <label for="username">Username</label>
-      </div>
+      <div class="input-container">
+        
+        <div>
+          <input type="text" name="username" id="username">
+          <label for="username">Username</label>
+        </div>
+        <div>
+          <input type="email" name="user_email" id="email">
+          <label for="email">Email</label>
+        </div>
+        <div>
+          <input type="password" name="user_pass" id="pass">
+          <label for="pass">Password</label>
+        </div>
+        <div>
+          <input type="password" name="confirm_pass" id="confirm-pass">
+          <label for="confirm-pass">Confirm Password</label>
+        </div>
 
-      <div>
-        <input type="email" name="user_email" id="email">
-        <label for="email">Email</label>
-      </div>
-
-      <div>
-        <input type="password" name="user_pass" id="pass">
-        <label for="pass">Password</label>
-      </div>
-
-      <div>
-        <input type="password" name="confirm_pass" id="confirm-pass">
-        <label for="confirm-pass">Confirm Password</label>
       </div>
 
       <div>
