Change Class Value Of Input Container

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="right-container">
       <h1>Elevate Your Status</h1>
 
-      <div class="input-container">
-        
+      <div class="inputs-container">
+
         <div>
           <input type="text" name="username" id="username">
           <label for="username">Username</label>
