--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
 
       <div class="inputs-container">
 
-        <div>
-          <input type="text" name="username" id="username">
-          <label for="username">Username</label>
+        <div class="input-left">
+          <div>
+            <input type="text" name="username" id="username">
+            <label for="username">Username</label>
+          </div>
+          <div>
+            <input type="email" name="user_email" id="email">
+            <label for="email">Email</label>
+          </div>
         </div>
-        <div>
-          <input type="email" name="user_email" id="email">
-          <label for="email">Email</label>
-        </div>
-        <div>
-          <input type="password" name="user_pass" id="pass">
-          <label for="pass">Password</label>
-        </div>
-        <div>
-          <input type="password" name="confirm_pass" id="confirm-pass">
-          <label for="confirm-pass">Confirm Password</label>
+
+        <div class="input-right">
+          <div>
+            <input type="password" name="user_pass" id="pass">
+            <label for="pass">Password</label>
+          </div>
+          <div>
+            <input type="password" name="confirm_pass" id="confirm-pass">
+            <label for="confirm-pass">Confirm Password</label>
+          </div>
         </div>
 
       </div>
