Add Required To Form Inputs

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
 
         <div class="input-left">
           <div>
-            <input type="text" name="username" id="username">
+            <input type="text" name="username" id="username" required>
             <label for="username">Username</label>
           </div>
           <div>
-            <input type="email" name="user_email" id="email">
+            <input type="email" name="user_email" id="email" required>
             <label for="email">Email</label>
           </div>
         </div>
 
         <div class="input-right">
           <div>
-            <input type="password" name="user_pass" id="pass">
+            <input type="password" name="user_pass" id="pass" required>
             <label for="pass">Password</label>
           </div>
           <div>
-            <input type="password" name="confirm_pass" id="confirm-pass">
+            <input type="password" name="confirm_pass" id="confirm-pass" required>
             <label for="confirm-pass">Confirm Password</label>
           </div>
         </div>
