Add Placeholder To Username And Email Input

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
         <div class="input-left">
           <div>
-            <input type="text" name="username" id="username" required>
+            <input type="text" name="username" id="username" placeholder="Dellonzz" required>
             <label for="username">Username</label>
           </div>
           <div>
-            <input type="email" name="user_email" id="email" required>
+            <input type="email" name="user_email" id="email" placeholder="Email" required>
             <label for="email">Email</label>
           </div>
         </div>
