--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <div class="input-left">
           <div>
             <input type="text" name="username" id="username" placeholder="Dellonzz" required>
+            <span></span>
             <label for="username">Username</label>
           </div>
           <div>
             <input type="email" name="user_email" id="email" placeholder="Email" required>
+            <span></span>
             <label for="email">Email</label>
           </div>
         </div>
@@ -38,10 +40,12 @@
         <div class="input-right">
           <div>
             <input type="password" name="user_pass" id="pass" required>
+            <span></span>
             <label for="pass">Password</label>
           </div>
           <div>
             <input type="password" name="confirm_pass" id="confirm-pass" required>
+            <span></span>
             <label for="confirm-pass">Confirm Password</label>
           </div>
         </div>
