--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
         <div class="input-right">
           <div>
-            <input type="password" name="user_pass" id="pass" required>
+            <input type="password" name="user_pass" id="pass" minlength="8" required>
             <span></span>
             <label for="pass">Password</label>
           </div>
           <div>
-            <input type="password" name="confirm_pass" id="confirm-pass" required>
+            <input type="password" name="confirm_pass" id="confirm-pass" minlength="8" required>
             <span></span>
             <label for="confirm-pass">Confirm Password</label>
           </div>
