--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <input type="password" name="confirm_pass" id="confirm-pass" placeholder="Confirm" minlength="8" required>
             <span></span>
             <label for="confirm-pass">Confirm Password</label>
+            <p class="invalid"></p>
           </div>
         </div>
 
