--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up | Money King</title>
+  <link rel="shortcut icon" href="money-king-favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
 </head>
